--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
   html {
     height: 100%;
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+    background-clip: content-box;
     overflow: hidden;
+    font-family: 'lato', sans-serif;
   }
   
   #stars {
@@ -87,6 +89,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
   
   @keyframes animStar {
     from {
