--- a/styles/proyectos.css
+++ b/styles/proyectos.css
@@ -17,7 +17,7 @@ body {
 
 .swiper {
     transform: translateY(-50%);
-    top: 40%;
+    top: 45%;
     width: 80%;
 }
 
@@ -25,10 +25,42 @@ body {
     background-position: center;
     background-size: cover;
     width: 250px;
-    height: 300px;
+    height: 450px;
 }
 
 .swiper-slide img {
-    height: 100%;
+    height: 85%;
     object-fit: cover;
+}
+.swiper-slide a {
+    width: 100%;
+}
+.swiper-slide h2 {
+    position: absolute;
+    transform: translateX(-50%);
+    top: 70%;
+    left: 70%;
+    border-radius: 0 15px 15px 0;
+    justify-content: center;
+    text-align: center;
+    color: #000;
+    text-decoration: none;
+    width: 350px;
+    height: 15%;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+h1 {
+    position: absolute;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    top: 20%;
+    left: 50%;
+    text-align: center;
+    justify-content: center;
+}
+
+.swiper-button-prev, .swiper-button-next {
+    color: #fff;
+    font-size: 30px;
 }
